入力ボックスの位置と形を変更しました

--- a/index.html
+++ b/index.html
@@ -100,12 +100,19 @@
             <!-- .message-text -->
           </div>
           <!-- .message -->
-          <div class="input-field">
-            <form action="#" method="post">
+          <div class="input-field d-flex flex-row align-items-end mb-5">
+            <form action="#" method="post" class="form">
               <p>
-                <input type="text" name="name" placeholder="チャットを入力" />
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="チャットを入力"
+                  class="textbox"
+                />
               </p>
-              <p><input type="button" value="▶" id="button2" /></p>
+              <p>
+                <input type="button" value="▶" id="button2" class="botton" />
+              </p>
             </form>
           </div>
         </div>
