メイン画面のアイコンを調整しました

--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
         <!-- 背景色はここで変える -->
         <div class="chat bg-white">
           <div class="message d-flex flex-row align-items-start mb-4">
-            <div
-              class="message-icon rounded-circle bg-secondary text-white fs-3"
-            >
+            <div class="message-icon1 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
             <!-- .message-icon -->
@@ -62,9 +60,7 @@
           </div>
           <!-- .message -->
           <div class="message d-flex flex-row align-items-start mb-4">
-            <div
-              class="message-icon rounded-circle bg-secondary text-white fs-3"
-            >
+            <div class="message-icon2 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
             <!-- .message-icon -->
@@ -75,9 +71,7 @@
           </div>
           <!-- .message -->
           <div class="message d-flex flex-row align-items-start mb-4">
-            <div
-              class="message-icon rounded-circle bg-secondary text-white fs-3"
-            >
+            <div class="message-icon3 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
             <!-- .message-icon -->
@@ -87,14 +81,14 @@
             <!-- .message-text -->
           </div>
           <!-- .message -->
-          <div class="message d-flex flex-row-reverse align-items-start mb-4">
-            <div
-              class="message-icon rounded-circle bg-secondary text-white fs-3"
-            >
+          <div
+            class="message-me d-flex flex-row-reverse align-items-start mb-4"
+          >
+            <div class="message-icon-me rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
             <!-- .message-icon -->
-            <p class="message-text p-2 me-2 mb-0 bg-your-color">
+            <p class="message-text-me p-2 me-2 mb-0 bg-your-color">
               サンプルテキスト。サンプルテキスト。サンプルテキスト。
             </p>
             <!-- .message-text -->
