メイン画面の修正を行いました

--- a/index.html
+++ b/index.html
@@ -47,98 +47,110 @@
     </nav>
     <!--  -->
     <div class="toggle-btn">
-      <span>ほげ</span>
+      <!-- <span>ほげ</span>
       <span>へっこ</span>
-      <span>へろー</span>
+      <span>へろー</span> -->
     </div>
   </div>
 
 
-    <div class="container">
-      <div class="main">
-        <div class="b-example-divider b-example-vr"></div>
-        <!-- .d-flex -->
-        <!-- 背景色はここで変える -->
-        <div class="chat bg-white">
-          <div class="message d-flex flex-row align-items-start mb-4">
+  <div class="container">
+    <div class="main">
+      <div class="b-example-divider b-example-vr"></div>
+      <!-- .d-flex -->
+      <!-- 背景色はここで変える -->
+      <div class="chat bg-white">
+        <div class="message d-flex flex-row align-items-start mb-4">
+          <div>
             <div class="message-icon1 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
-            <!-- .message-icon -->
-            <p class="message-text1 p-2 ms-2 mb-0 bg-your-color">
-              <!-- bg-~~でメッセージの背景色を変える -->
-              サンプルテキスト。サンプルテキスト。サ
-            </p>
-            <!-- .message-text -->
+            <p>PALM2</p>
           </div>
-          <!-- .message -->
-          <div class="message d-flex flex-row align-items-start mb-4">
+          <!-- .message-icon -->
+          <p class="message-text1 p-2 ms-2 mb-0 bg-your-color">
+            <!-- bg-~~でメッセージの背景色を変える -->
+            1のサンプルテキスト。サンプルテキスト。だよん よろぴくネ☆
+          </p>
+          <!-- .message-text -->
+        </div>
+        <!-- .message -->
+        <div class="message d-flex flex-row align-items-start mb-4">
+          <div>
             <div class="message-icon2 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
-            <!-- .message-icon -->
-            <p class="message-text2 p-2 ms-2 mb-0 bg-your-color">
-              サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。~~~~~~さんぷるさんぷるさんぷるサンプルサンプルサンプルサンプルサンプルサンプルサンプル
-            </p>
-            <!-- .message-text -->
+            <p>LLaMa</p>
           </div>
-          <!-- .message -->
-          <div class="message d-flex flex-row align-items-start mb-4">
+          <!-- .message-icon -->
+          <p class="message-text2 p-2 ms-2 mb-0 bg-your-color">
+            2のサンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。~~~~~~さんぷるさんぷるさんぷるサンプルサンプルサンプルサンプルサンプルサンプルサンプル
+          </p>
+          <!-- .message-text -->
+        </div>
+        <!-- .message -->
+        <div class="message d-flex flex-row align-items-start mb-4">
+          <div>
             <div class="message-icon3 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
-            <!-- .message-icon -->
-            <p class="message-text3 p-2 ms-2 mb-0 bg-your-color">
-              サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。
-            </p>
-            <!-- .message-text -->
-          </div>
-          <!-- .message -->
-          <div
-            class="message-me d-flex flex-row-reverse align-items-start mb-4"
-          >
-            <div class="message-icon-me rounded bg-your-color text-white fs-3">
-              <i class="fas fa-user"></i>
-            </div>
-            <!-- .message-icon -->
-            <p class="message-text-me p-2 me-2 mb-0 bg-your-color">
-              サンプルテキスト。サンプルテキスト。サンプルテキスト。
-            </p>
-            <!-- .message-text -->
-
+            <p>ChatGPT</p>
           </div>
           <!-- .message-icon -->
           <p class="message-text3 p-2 ms-2 mb-0 bg-your-color">
-            サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。
+            3のサンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。
           </p>
           <!-- .message-text -->
         </div>
         <!-- .message -->
-        <div class="message d-flex flex-row-reverse align-items-start mb-4">
-          <div class="message-icon rounded-circle bg-secondary text-white fs-3">
-            <i class="fas fa-user"></i>
+        <div class="message-me d-flex flex-row-reverse align-items-start mb-4">
+          <div>
+            <div class="message-icon-me rounded bg-your-color text-white fs-3">
+              <i class="fas fa-user"></i>
+            </div>
+            <p>私</p>
           </div>
           <!-- .message-icon -->
-          <p class="message-text p-2 me-2 mb-0 bg-your-color">
-            サンプルテキスト。サンプルテキスト。サンプルテキスト。
+          <p class="message-text-me p-2 me-2 mb-0 bg-your-color">
+            私のサンプルテキスト。
           </p>
           <!-- .message-text -->
         </div>
-        <!-- .message -->
-        <div class="input-field d-flex flex-row align-items-end mb-5">
-          <form action="#" method="post" class="form">
-            <p>
-              <input type="text" name="name" placeholder="チャットを入力" class="textbox" />
-            </p>
-            <p>
-              <input type="button" value="▶" id="button2" class="botton" />
-            </p>
-          </form>
+
+        <!-- .message-icon -->
+        <div class="message d-flex flex-row align-items-start mb-4">
+          <div>
+            <div class="message-icon3 rounded bg-your-color text-white fs-3">
+              <i class="fas fa-user"></i>
+            </div>
+            <p>ChatGPT</p>
+          </div>
+          <!-- .message-icon -->
+          <p class="message-text3 p-2 ms-2 mb-0 bg-your-color">
+            3のサンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。
+          </p>
+          <!-- .message-text -->
         </div>
       </div>
-      <!-- .chat -->
+
+      <!-- .message -->
+      <div class="input-field d-flex flex-row align-items-end mb-5">
+        <form action="#" method="post" class="form">
+          <input type="text" name="name" placeholder="チャットを入力" class="textbox" />
+          <!-- <input value="▶" id="button2" class="botton" /> -->
+          <button id="button2" class="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-fill"
+              viewBox="0 0 16 16">
+              <path
+                d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z" />
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
-    <!-- .container -->
+    <!-- .chat -->
+  </div>
+  <!-- .container -->
   </div>
   <!-- .main -->
 
