スクロールができないバグの修正

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <h1 class="title">discussion!</h1>
+    <h1 class="title">どうしよっかなあ</h1>
   </header>
 
 
@@ -61,7 +61,7 @@
       <!-- 背景色はここで変える -->
       <div class="chat bg-white">
         <div class="message d-flex flex-row align-items-start mb-4">
-          <div>
+          <div class="icon">
             <div class="message-icon1 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
@@ -76,7 +76,7 @@
         </div>
         <!-- .message -->
         <div class="message d-flex flex-row align-items-start mb-4">
-          <div>
+          <div class="icon">
             <div class="message-icon2 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
@@ -90,7 +90,7 @@
         </div>
         <!-- .message -->
         <div class="message d-flex flex-row align-items-start mb-4">
-          <div>
+          <div class="icon">
             <div class="message-icon3 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
@@ -104,7 +104,7 @@
         </div>
         <!-- .message -->
         <div class="message-me d-flex flex-row-reverse align-items-start mb-4">
-          <div>
+          <div class="icon">
             <div class="message-icon-me rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
@@ -112,21 +112,21 @@
           </div>
           <!-- .message-icon -->
           <p class="message-text-me p-2 me-2 mb-0 bg-your-color">
-            私のサンプルテキスト。
+            私のサンプルテキスト。だよおおおおおねえええええ。あｄｆさおふぁそｆｊそいｆじゃそいｆじゃｓｄｆ
           </p>
           <!-- .message-text -->
         </div>
 
         <!-- .message-icon -->
         <div class="message d-flex flex-row align-items-start mb-4">
-          <div>
-            <div class="message-icon3 rounded bg-your-color text-white fs-3">
+          <div class="icon">
+            <div class="message-icon4 rounded bg-your-color text-white fs-3">
               <i class="fas fa-user"></i>
             </div>
-            <p>ChatGPT</p>
+            <p>claude2</p>
           </div>
           <!-- .message-icon -->
-          <p class="message-text3 p-2 ms-2 mb-0 bg-your-color">
+          <p class="message-text4 p-2 ms-2 mb-0 bg-your-color">
             3のサンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。
           </p>
           <!-- .message-text -->
